--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/vite": "^4.1.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.9.0",
+    "cheerio": "^1.0.0",
     "framer-motion": "^12.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
