--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "dotenvx run -- vite",
+    "build": "dotenvx run -- vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "dotenvx run -- vite preview"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.44.0",
     "@headlessui/react": "^2.2.2",
     "@hugeicons/core-free-icons": "^1.0.14",
     "@hugeicons/react": "^1.0.5",
@@ -18,7 +19,11 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.7.2",
+    "fs": "^0.0.1-security",
+    "openai": "^4.98.0",
+    "puppeteer": "^24.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
